--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <li>Me gusta programar.</li>
             </ul>
         </section>
+
+        <a href="https://www.facebook.com/" 
+            target="_blank" 
+            class="btn-facebook">
+            <BUtton>FACEBOOK</BUtton>
+        </a>
     </main>
 
     <footer class="footer">
